# everscale

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CTestCustom.cmake.in  GNUmakefile  GNUmakevars  LICENSE  LICENSE.md  TODO  common.cmake  config.cmake  config.h.in  dependencies.cmake  macros.cmake  profiles.cmake  report.sh
base/: CMakeLists.txt  CTestCustom.cmake.in
base/include/: ASTBoolean.h  ASTCallbacks.h  ASTDecimal.h  ASTElement.h  ASTInteger.h  ASTList.h  ASTMap.h  ASTNull.h  ASTScalar.h  ASTString.h  ASTTree.h  ESBAllocator.h  ESBAllocatorCleanupHandler.h  ESBAssert.h  ESBAveragingCounter.h  ESBBoringSSLSocket.h  ESBBuddyAllocator.h  ESBBuddyCacheAllocator.h  ESBBuffer.h  ESBBufferPool.h  ESBBufferedFile.h  ESBChar.h  ESBCleanupHandler.h  ESBClearSocket.h  ESBClientTLSContextIndex.h  ESBClientTLSSocket.h  ESBCommand.h  ESBCommandThread.h  ESBCommon.h  ESBCompactStringMap.h  ESBComparator.h  ESBConfig.h  ESBConnectedSocket.h  ESBConnectedTCPSocket.h  ESBConnectionPool.h  ESBConsoleLogger.h  ESBCountingSemaphore.h  ESBDate.h  ESBDelayedCommand.h  ESBDiscardAllocator.h  (+148 more)
base/source/: ASTBoolean.cpp  ASTCallbacks.cpp  ASTDecimal.cpp  ASTElement.cpp  ASTInteger.cpp  ASTList.cpp  ASTMap.cpp  ASTNull.cpp  ASTScalar.cpp  ASTString.cpp  ASTTree.cpp  ESBAllocator.cpp  ESBAveragingCounter.cpp  ESBBoringSSLSocket.cpp  ESBBuddyAllocator.cpp  ESBBuddyCacheAllocator.cpp  ESBBuffer.cpp  ESBBufferPool.cpp  ESBBufferedFile.cpp  ESBClearSocket.cpp  ESBClientTLSContextIndex.cpp  ESBClientTLSSocket.cpp  ESBCommandThread.cpp  ESBCompactStringMap.cpp  ESBComparator.cpp  ESBConnectedSocket.cpp  ESBConnectedTCPSocket.cpp  ESBConnectionPool.cpp  ESBCountingSemaphore.cpp  ESBDate.cpp  ESBDelayedCommand.cpp  ESBDiscardAllocator.cpp  ESBDnsClient.cpp  ESBEmbeddedList.cpp  ESBEmbeddedListElement.cpp  ESBEmbeddedMapBase.cpp  ESBEmbeddedMapElement.cpp  ESBEpollMultiplexer.cpp  ESBEpollMultiplexerFactory.cpp  ESBError.cpp  (+62 more)
base/src/: ESBAllocator.cpp  ESBAllocatorCleanupHandler.cpp  ESBAveragingCounter.cpp  ESBBuddyAllocator.cpp  ESBBuffer.cpp  ESBBufferPool.cpp  ESBCommand.cpp  ESBCommandThread.cpp  ESBComparator.cpp  ESBConnectedTCPSocket.cpp  ESBConsoleLogger.cpp  ESBCountingSemaphore.cpp  ESBDate.cpp  ESBDiscardAllocator.cpp  ESBEmbeddedList.cpp  ESBEpollMultiplexer.cpp  ESBEpollMultiplexerFactory.cpp  ESBError.cpp  ESBEventSocket.cpp  ESBFixedAllocator.cpp  ESBFlag.cpp  ESBHistoricalPerformanceCounter.cpp  ESBList.cpp  ESBListeningTCPSocket.cpp  ESBLockable.cpp  ESBLogger.cpp  ESBMap.cpp  ESBMutex.cpp  ESBNullLock.cpp  ESBNullLogger.cpp  ESBPerformanceCounter.cpp  ESBProcessLimits.cpp  ESBRand.cpp  ESBReferenceCount.cpp  ESBSharedAllocator.cpp  ESBSharedAveragingCounter.cpp  ESBSharedCounter.cpp  ESBSharedEmbeddedMap.cpp  ESBSharedQueue.cpp  ESBSimplePerformanceCounter.cpp  (+53 more)
base/tests/: ASTCountingCallbacks.h  AlignmentTest.cpp  ESBAssertTest.cpp  ESBAveragingCounterTest.cpp  ESBBoringSSLTest.cpp  ESBBuddyAllocatorTest.cpp  ESBBuddyAllocatorTest2.cpp  ESBBuddyCacheAllocatorTest.cpp  ESBBufferTest.cpp  ESBClearSocketTest.cpp  ESBCompactStringMapTest.cpp  ESBConnectedTLSSocketTest.cpp  ESBConnectionPoolTest.cpp  ESBDateTest.cpp  ESBDiscardAllocatorTest.cpp  ESBDiscardAllocatorTest2.cpp  ESBEchoServer.cpp  ESBEchoServer.h  ESBFixedAllocatorTest.cpp  ESBFlatTimingWheelTest.cpp  ESBJsonCountingCallbacks.h  ESBJsonParserTest.cpp  ESBJsonTreeBuilderTest.cpp  ESBJsonTreeTest.cpp  ESBListTest.cpp  ESBLockableTest.cpp  ESBLoggerTest.cpp  ESBMapTest.cpp  ESBMapTest2.cpp  ESBPerformanceCounterTest.cpp  ESBProcessLimitsTest.cpp  ESBRandTest.cpp  ESBServerTLSContextIndexTest.cpp  ESBSharedCounterTest.cpp  ESBSharedEmbeddedMapTest.cpp  ESBSharedIntTest.cpp  ESBSharedQueueConsumer.cpp  ESBSharedQueueConsumer.h  ESBSharedQueueProducer.cpp  ESBSharedQueueProducer.h  (+55 more)
control/: CMakeLists.txt  dependencies.cmake
control-plane/: CMakeLists.txt  dependencies.cmake
control/source/: ListenerDiscoveryClient.cpp  ListenerDiscoveryService.cpp
data-plane/: CMakeLists.txt
data-plane/config/: CMakeLists.txt
data-plane/filter/: CMakeLists.txt
data-plane/http-common/: CMakeLists.txt
data-plane/http-plugin/: CMakeLists.txt
data-plane/http-test-common/: CMakeLists.txt
data-plane/http1/: CMakeLists.txt
data-plane/loadgen/: CMakeLists.txt
data-plane/multiplexers/: CMakeLists.txt
data-plane/origin/: CMakeLists.txt
data-plane/proxy/: CMakeLists.txt
http/http-common/: CMakeLists.txt
http/http1/: CMakeLists.txt
http/loadgen/: CMakeLists.txt
http/multiplexers/: CMakeLists.txt
http/proxy/: CMakeLists.txt
tcp/client/: CMakeLists.txt  ESTClientMain.cpp  ESTClientSocket.cpp  ESTClientSocket.h  ESTClientSocketFactory.cpp  ESTClientSocketFactory.h  ESTPerformanceCounter.cpp  ESTPerformanceCounter.h
tcp_echo/server/: CMakeLists.txt  ESTListeningSocket.h  ESTServerMain.cpp  ESTServerSocket.cpp
test_framework/: CMakeLists.txt
test_framework/include/: ESTFAssert.h  ESTFComponent.h  ESTFComponentThread.h  ESTFComposite.h  ESTFConcurrencyComposite.h  ESTFConcurrencyDecorator.h  ESTFConfig.h  ESTFDarwinConfig.h  ESTFDate.h  ESTFLinuxConfig.h  ESTFObject.h  ESTFObjectPtr.h  ESTFRand.h  ESTFRandomizedDecorator.h  ESTFRepetitionDecorator.h  ESTFResultCollector.h  ESTFSystemAssert.h  ESTFThread.h
test_framework/src/: ESTFComponentThread.cpp  ESTFComposite.cpp  ESTFConcurrencyComposite.cpp  ESTFConcurrencyDecorator.cpp  ESTFDate.cpp  ESTFRandomizedDecorator.cpp  ESTFRepetitionDecorator.cpp  ESTFResultCollector.cpp  ESTFThread.cpp
unit-tf/: CMakeLists.txt
unit-tf/include/: ESTFAssert.h  ESTFComponent.h  ESTFComponentThread.h  ESTFComposite.h  ESTFConcurrencyComposite.h  ESTFConcurrencyDecorator.h  ESTFConfig.h  ESTFDate.h  ESTFLinuxConfig.h  ESTFMacOSConfig.h  ESTFObject.h  ESTFObjectPtr.h  ESTFRand.h  ESTFRandomizedDecorator.h  ESTFRepetitionDecorator.h  ESTFResultCollector.h  ESTFResultCollectorAssert.h  ESTFSystemAssert.h  ESTFThread.h
unit-tf/source/: ESTFComponentThread.cpp  ESTFConcurrencyComposite.cpp  ESTFConcurrencyDecorator.cpp  ESTFRepetitionDecorator.cpp  (+1 more)
(+742 files in other folders)
